product service updated