@@ -20,83 +20,80 @@ import java.util.stream.Collectors;
 @RequiredArgsConstructor
 @Slf4j //coming from lombok. to add the logs
 public class ProductService {
-    private final ProductRepository repo;
+    private final ProductRepository productRepository;
     private  final CategoryRepository categoryRepository;
 
     @Autowired
     private ModelMapper modelMapper;
 
-    public String createProduct(ProductRequestDTO productRequest) {
-        List<Category> categories = productRequest.getProductCategories().stream()
-                .map(category -> categoryRepository.findById(category.getId())
-                        .orElseThrow(() -> new IllegalArgumentException("Invalid category ID: " + category.getId())))
-                .toList();
+    public Long createProduct(ProductRequestDTO productRequest) {
+        Category category = categoryRepository.findById(productRequest.getProductCategoryId())
+                .orElseThrow(() -> new IllegalArgumentException("Invalid category ID: " + productRequest.getProductCategoryId()));
 
         Product product = Product.builder()
                 .productName(productRequest.getProductName())
                 .productDescription(productRequest.getProductDescription())
-                .productCategories(categories)
+                .productCategory(category)
                 .productUnit(productRequest.getProductUnit())
                 .productPricePerUnit(productRequest.getProductPricePerUnit())
                 .quantity(productRequest.getQuantity())
                 .deleted(false)
                 .build();
 
-        repo.save(product);
+        product = productRepository.save(product);
         log.info("Product {} is saved!", product.getId());
-        //return the created product id
         return product.getId();
     }
 
     public List<ProductResponseDTO> getAllProducts() {
-        List<Product> products = repo.findAll().stream()
+        List<Product> products = productRepository.findAll().stream()
                 .filter(product -> !product.isDeleted())
                 .collect(Collectors.toList());
 
         return products.stream()
                 .map(product -> modelMapper.map(product, ProductResponseDTO.class))
-                .toList();
+                .collect(Collectors.toList());
     }
 
-    public ProductResponseDTO getProductById(String id) {
-        Product product = repo.findById(id)
+    public ProductResponseDTO getProductById(Long id) {
+        Product product = productRepository.findById(id)
                 .filter(p -> !p.isDeleted())
                 .orElseThrow(() -> new IllegalArgumentException("Product not found: " + id));
         return modelMapper.map(product, ProductResponseDTO.class);
     }
 
-    public ProductResponseDTO updateProduct(String id, ProductRequestDTO productRequest) {
-        Product existingProduct = repo.findById(id)
+    public ProductResponseDTO updateProduct(Long id, ProductRequestDTO productRequest) {
+        Product existingProduct = productRepository.findById(id)
                 .filter(p -> !p.isDeleted())
                 .orElseThrow(() -> new IllegalArgumentException("Product not found: " + id));
 
-        List<Category> categories = productRequest.getProductCategories().stream()
-                .map(category -> categoryRepository.findById(category.getId())
-                        .orElseThrow(() -> new IllegalArgumentException("Invalid category ID: " + category.getId())))
-                .toList();
+        Category category = categoryRepository.findById(productRequest.getProductCategoryId())
+                .orElseThrow(() -> new IllegalArgumentException("Invalid category ID: " + productRequest.getProductCategoryId()));
 
         existingProduct.setProductName(productRequest.getProductName());
         existingProduct.setProductDescription(productRequest.getProductDescription());
-        existingProduct.setProductCategories(categories);
+        existingProduct.setProductCategory(category);
         existingProduct.setProductUnit(productRequest.getProductUnit());
         existingProduct.setProductPricePerUnit(productRequest.getProductPricePerUnit());
+        existingProduct.setQuantity(productRequest.getQuantity());
+        existingProduct.setDeleted(productRequest.isDeleted());
 
-        repo.save(existingProduct);
+        productRepository.save(existingProduct);
         log.info("Product {} is updated!", existingProduct.getId());
         return modelMapper.map(existingProduct, ProductResponseDTO.class);
     }
 
-    public void deleteProduct(String id) {
-        Product product = repo.findById(id)
+    public void deleteProduct(Long id) {
+        Product product = productRepository.findById(id)
                 .filter(p -> !p.isDeleted())
                 .orElseThrow(() -> new IllegalArgumentException("Product not found: " + id));
         product.setDeleted(true);
-        repo.save(product);
+        productRepository.save(product);
         log.info("Product {} is marked as deleted!", product.getId());
     }
 
-    public ProductAvailabilityResponseDTO checkProductAvailability(String productId) {
-        Product product = repo.findById(productId)
+    public ProductAvailabilityResponseDTO checkProductAvailability(Long productId) {
+        Product product = productRepository.findById(productId)
                 .orElseThrow(() -> new IllegalArgumentException("Product not found with ID: " + productId));
 
         boolean available = !product.isDeleted() && product.getQuantity() > 0;
